results/SpecGenBench/conversational/log-ConvertToTitle-2023_08_27_01_53_31.txt
class Solution {
    /*@ requires columnNumber >= 1;
      @ ensures \result != null;
      @ ensures \result.length() > 0;
      @ ensures (\forall int i; 0 <= i && i < \result.length(); 'A' <= \result.charAt(i) && \result.charAt(i) <= 'Z');
      @ ensures (\exists int i; 0 <= i && i < \result.length(); \result.charAt(i) == 'A');
      @ ensures (\forall int i; 0 <= i && i < \result.length(); (\exists int j; 0 <= j && j <= i; \result.charAt(j) != \result.charAt(i)));
    |}*/
    public String convertToTitle(int columnNumber) {
        StringBuffer sb = new StringBuffer();
        while (columnNumber > 0) {
            int a0 = (columnNumber - 1) % 26 + 1;
            sb.append((char)(a0 - 1 + 'A'));
            columnNumber = (columnNumber - a0) / 26;
        }
        return sb.reverse().toString();
    }
}
/home/max/Documents/JMLGPT/tmp/ConvertToTitle.java:2: error: Misplaced method specifications preceding a |} clause (ignored)
    /*@ requires columnNumber >= 1;
        ^
/home/max/Documents/JMLGPT/tmp/ConvertToTitle.java:8: error: The token |} is illegal or not implemented for a type or method clause (JmlParser.classOrInterfaceBodyDeclaration)
    |}*/
    ^
2 errors

class Solution {
    /*@ requires columnNumber >= 1;
      @ ensures \result != null;
      @ ensures \result.length() > 0;
      @ ensures (\forall int i; 0 <= i && i < \result.length(); 'A' <= \result.charAt(i) && \result.charAt(i) <= 'Z');
      @ ensures (\exists int i; 0 <= i && i < \result.length(); \result.charAt(i) == 'A');
      @ ensures (\forall int i, j; 0 <= i && i < j && j < \result.length(); \result.charAt(i) != \result.charAt(j));
    */
    public String convertToTitle(int columnNumber) {
        StringBuffer sb = new StringBuffer();
        while (columnNumber > 0) {
            int a0 = (columnNumber - 1) % 26 + 1;
            sb.append((char)(a0 - 1 + 'A'));
            columnNumber = (columnNumber - a0) / 26;
        }
        return sb.reverse().toString();
    }
}
/home/max/Documents/JMLGPT/tmp/ConvertToTitle.java:18: verify: The prover cannot establish an assertion (UndefinedCalledMethodPrecondition: /home/max/Documents/JMLGPT/openjml/specs/java/lang/String.jml:447:) in method convertToTitle
}
^
Note: Call stack
  /home/max/Documents/JMLGPT/openjml/specs/java/lang/String.jml:458: java.lang.String.equals
  /home/max/Documents/JMLGPT/openjml/specs/java/lang/StringBuffer.jml:35: java.lang.String.equals
  /home/max/Documents/JMLGPT/tmp/ConvertToTitle.java:10: java.lang.StringBuffer.<init>
/home/max/Documents/JMLGPT/openjml/specs/java/lang/String.jml:447: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ConvertToTitle.java:18:
      @ public static model helper boolean equals(nullable String s1, nullable String s2);
                                           ^
/home/max/Documents/JMLGPT/openjml/specs/java/lang/String.jml:436: verify: Precondition conjunct is false: s1.charArray != null
      @   //-RAC@ requires s1.charArray != null & s2.charArray != null; // OPENJML: TODO Needs the invariant that charArray is not null
                                        ^
/home/max/Documents/JMLGPT/openjml/specs/java/lang/String.jml:439: verify: Precondition conjunct is false: s1 == s2
      @   requires s1 == s2;
                      ^
/home/max/Documents/JMLGPT/openjml/specs/java/lang/String.jml:442: verify: Precondition conjunct is false: s1 == null || s2 == null || (java.lang.String.isInterned(s1) && java.lang.String.isInterned(s2))
      @   requires s1 == null || s2 == null ||
                                            ^
5 verification failures

class Solution {
    /*@ requires columnNumber >= 1;
      @ ensures \result != null;
      @ ensures \result.length() > 0;
      @ ensures (\forall int i; 0 <= i && i < \result.length(); 'A' <= \result.charAt(i) && \result.charAt(i) <= 'Z');
      @ ensures (\exists int i; 0 <= i && i < \result.length(); \result.charAt(i) == 'A');
      @ ensures (\forall int i, j; 0 <= i && i < j && j < \result.length(); \result.charAt(i) != \result.charAt(j));
    */
    public String convertToTitle(int columnNumber) {
        StringBuilder sb = new StringBuilder();
        while (columnNumber > 0) {
            int a0 = (columnNumber - 1) % 26 + 1;
            sb.append((char)(a0 - 1 + 'A'));
            columnNumber = (columnNumber - a0) / 26;
        }
        return sb.reverse().toString();
    }
}
